# bike_pressure_monitor

./: .cproject  .gitattributes  .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.defaults  tpms_type2_calibration.py
!UIoverride/: ui_img_manager.c
backup/: ui_img_1858735756.c
components/: lv_conf.h
components/lvgl-custom/: lv_conf.h
components/lvgl-custom/env_support/cmake/: esp.cmake
components/lvgl-custom/src/: lv_conf.h  lv_conf.h.template
docs/: TPMS_TYPE1_SPECIFICATION.md  TPMS_TYPE2_SPECIFICATION.md
main/: Application.cpp  Application.h  CMakeLists.txt  ConfigManager.cpp  ConfigManager.h  DisplayManager.cpp  DisplayManager.h  LGFX_driver.h  PairController.cpp  PairController.h  SPIFFSManager.cpp  SPIFFSManager.h  State.cpp  State.h  TPMSScanCallbacks.cpp  TPMSScanCallbacks.h  TPMSSensor.h  TPMSUtil.cpp  TPMSUtil.h  TPMSUtil_Type2.cpp  TPMSUtil_Type2.h  UIController.cpp  UIController.h  UIImageLoader.cpp  UIImageLoader.h  WebServer.cpp  WebServer.h  WiFiManager.cpp  WiFiManager.h  copy_spiffs_files.py  fix_lvgl_includes.py  index_html.h  lv_conf.h  lvgl_spiffs_driver.cpp  lvgl_spiffs_driver.h  main.cpp  ui_img_utils.c  ui_img_utils.h
main/UI/: CMakeLists.txt  fastlz.c  fastlz.h  filelist.txt  project.info  ui.c  ui.h  ui_img_manager.c  ui_img_manager.h
main/UI/components/: ui_comp.h  ui_comp_hook.c  ui_comp_hook.h  ui_comp_label1.c  ui_comp_label1.h  ui_comp_label2.c  ui_comp_label2.h
main/UI/images/: ui_img_1818877690.c  ui_img_942102620.c  ui_img_alert_png.c  ui_img_btoff_png.c  ui_img_bton_png.c  ui_img_idle_png.c  ui_img_splashlogo.c  ui_img_temp_png.c  ui_img_tpmsblack_png.c  ui_img_tpmsred_png.c  ui_img_tpmsyellow_png.c
main/UI/screens/: ui_Black.c  ui_Black.h  ui_Main.c  ui_Main.h  ui_Pair.c  ui_Pair.h  ui_Splash.c  ui_Splash.h
squareline/: SquareLine_Project.sll  SquareLine_Project.slp  SquareLine_Project.spj  project.info
squareline/components/: Label1.ecomp  Label2.ecomp
